Added service and triggers for boot(not used for now)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (C) 2017 Ankit Sadana
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -26,12 +25,14 @@
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <!--Main Activity available to the user-->
         <activity
             android:name=".MainTaskActivity"
             android:label="@string/app_name">
@@ -41,6 +42,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <!--Service to watch for events and trigger mapped actions-->
+        <service android:name=".IGotThisService" />
+        <!--Receiver to listen for Boot complete intent-->
+        <receiver
+            android:name=".util.BootReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
+
     </application>
 
 </manifest>
