--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,6 @@
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 
     <application
-        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -45,13 +44,16 @@
         <!--Service to watch for events and trigger mapped actions-->
         <service android:name=".IGotThisService" />
         <!--Receiver to listen for Boot complete intent-->
-        <receiver
-            android:name=".util.BootReceiver">
+        <receiver android:name=".util.BootReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
-
+        <receiver android:name=".util.ConnectivityReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.CONNECTIVITY_ACTION" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
