--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,13 @@ sudo: false
 language: android
 jdk: oraclejdk8
 before_cache:
- - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
- - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
-
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
 cache:
- directories:
- - $HOME/.gradle/caches/
- - $HOME/.gradle/wrapper/
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
+    - $HOME/.android/build-cache
 env:
   global:
    - ANDROID_API_LEVEL=26
@@ -19,10 +19,10 @@ env:
 
 android:
   components:
-    - tools
-    - platform-tools
     - build-tools-26.0.3
     - android-26
+    - tools
+    - platform-tools
     - extra-google-m2repository
     - extra-android-m2repository
     # Google Play Services
@@ -41,11 +41,11 @@ android:
 #  - android-wait-for-emulator
 #  - adb shell input keyevent 82 &
 script:
-        - ./gradlew checkCOnnected
+        - ./gradlew connectedCheck
         - ./gradlew clean
         - ./gradlew assembleDebug
         - ./gradlew assembleDebugAndroidTest
-#before_install:
+before_install:
 #          - mkdir "$ANDROID_HOME/licenses" || true
 #          - echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
 #          - echo -e "\n84831b9409646a918e30573bab4c9c91346d8abd" > "$ANDROID_HOME/licenses/android-sdk-preview-license"
