--- a/.travis.yml
+++ b/.travis.yml
@@ -1,55 +1,67 @@
 sudo: false
 language: android
-jdk: oraclejdk8
+jdk: openjdk8
+
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
   - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+
 cache:
   directories:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
     - $HOME/.android/build-cache
+
 env:
   global:
    - ANDROID_API_LEVEL=26
-#   - EMULATOR_API_LEVEL=21
    - ANDROID_BUILD_TOOLS_VERSION=26.0.3
-#   - ANDROID_ABI=google_apis/armeabi-v7a
-   - ADB_INSTALL_TIMEOUT=20 # minutes (2 minutes by default)
+   - ADB_INSTALL_TIMEOUT=5 # minutes (2 minutes by default)
 
 android:
   components:
-    - build-tools-26.0.3
-    - android-26
     - tools
+    - tools # Running this twice get's the latest build tools (https://github.com/codepath/android_guides/wiki/Setting-up-Travis-CI)
     - platform-tools
-    - extra-google-m2repository
-    - extra-android-m2repository
-    # Google Play Services
-#    - extra-google-google_play_services
-    # Support library
-    - extra-android-support
+    - android-${ANDROID_API_LEVEL}
+    - build-tools-${ANDROID_BUILD_TOOLS_VERSION}
+    - extra
 
-    - addon-google_apis-google-$ANDROID_API_LEVEL
-#    - addon-google_apis-google-$EMULATOR_API_LEVEL
+# Shouldn't be needed gradlew has been commited as 755
+# before_install:
+#           - chmod +x gradlew
 
-#    - sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API_LEVEL
-#    - sys-img-armeabi-v7a-addon-google_apis-google-$EMULATOR_API_LEVEL
-#before_script:
-#  - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
-#  - emulator -avd test -no-skin -no-audio -no-window &
-#  - android-wait-for-emulator
-#  - adb shell input keyevent 82 &
-script:
-        - ./gradlew connectedCheck
-        - ./gradlew clean
-        - ./gradlew assembleDebug
-        - ./gradlew assembleDebugAndroidTest
-before_install:
-          - pwd
-          - ls -alFh
-          - chmod +x gradlew
+before_script:
+  - 
 
-branches:
-        only:
-                - develop
+stages:
+  - build
+  - test
+  # - androidTest
+  # - name: deploy
+  #   if: branch = master
+
+build:
+  stage: build
+  script:
+    - ./gradlew assembleDebug
+  artifacts:
+    paths:
+    - app/build/outputs/
+
+unitTests:
+  stage: test
+  script:
+    - ./gradlew test
+
+functionalTests:
+  stage: androidTest
+  script:
+    - wget --quiet --output-document=android-wait-for-emulator https://raw.githubusercontent.com/travis-ci/travis-cookbooks/0f497eb71291b52a703143c5cd63a217c8766dc9/community-cookbooks/android-sdk/files/default/android-wait-for-emulator
+    - chmod +x android-wait-for-emulator
+    - echo y | ${ANDROID_HOME}/tools/android --silent update sdk --no-ui --all --filter sys-img-x86-google_apis-${ANDROID_API_LEVEL}
+    - echo no | ${ANDROID_HOME}/tools/android create avd -n test -t android-${ANDROID_API_LEVEL} --abi google_apis/x86
+    - ${ANDROID_HOME}/tools/emulator64-x86 -avd test -no-window -no-audio &
+    - ./android-wait-for-emulator
+    - adb shell input keyevent 82
+    - ./gradlew cAT
