--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,8 @@ cache:
 
 env:
   global:
-   - ANDROID_API_LEVEL=26
-   - ANDROID_BUILD_TOOLS_VERSION=26.0.3
+   - ANDROID_API_LEVEL=27
+   - ANDROID_BUILD_TOOLS_VERSION=27.0.3
    - ADB_INSTALL_TIMEOUT=5 # minutes (2 minutes by default)
 
 android:
@@ -37,7 +37,7 @@ before_script:
 stages:
   - build
   - test
-  # - androidTest
+   - androidTest
   # - name: deploy
   #   if: branch = master
 
