--- a/.travis.yml
+++ b/.travis.yml
@@ -31,13 +31,16 @@ android:
 # before_install:
 #           - chmod +x gradlew
 
-before_script:
-  - 
+jobs:
+  include:
+    - stage: build
+    - stage: test
+    - stage: androidTest
 
 stages:
   - build
   - test
-  #   - androidTest
+  - androidTest
   # - name: deploy
   #   if: branch = master
 
@@ -54,14 +57,14 @@ unitTests:
   script:
     - ./gradlew test
 
-#functionalTests:
-#  stage: androidTest
-#  script:
-#    - wget --quiet --output-document=android-wait-for-emulator https://raw.githubusercontent.com/travis-ci/travis-cookbooks/0f497eb71291b52a703143c5cd63a217c8766dc9/community-cookbooks/android-sdk/files/default/android-wait-for-emulator
-#    - chmod +x android-wait-for-emulator
-#    - echo y | ${ANDROID_HOME}/tools/android --silent update sdk --no-ui --all --filter sys-img-x86-google_apis-${ANDROID_API_LEVEL}
-#    - echo no | ${ANDROID_HOME}/tools/android create avd -n test -t android-${ANDROID_API_LEVEL} --abi google_apis/x86
-#    - ${ANDROID_HOME}/tools/emulator64-x86 -avd test -no-window -no-audio &
-#    - ./android-wait-for-emulator
-#    - adb shell input keyevent 82
-#    - ./gradlew cAT
+functionalTests:
+  stage: androidTest
+  script:
+    - wget --quiet --output-document=android-wait-for-emulator https://raw.githubusercontent.com/travis-ci/travis-cookbooks/0f497eb71291b52a703143c5cd63a217c8766dc9/community-cookbooks/android-sdk/files/default/android-wait-for-emulator
+    - chmod +x android-wait-for-emulator
+    - echo y | ${ANDROID_HOME}/tools/android --silent update sdk --no-ui --all --filter sys-img-x86-google_apis-${ANDROID_API_LEVEL}
+    - echo no | ${ANDROID_HOME}/tools/android create avd -n test -t android-${ANDROID_API_LEVEL} --abi google_apis/x86
+    - ${ANDROID_HOME}/tools/emulator64-x86 -avd test -no-window -no-audio &
+    - ./android-wait-for-emulator
+    - adb shell input keyevent 82
+    - ./gradlew cAT
